# SaraBrain

./: .gitignore  .mcp.json  README.md  aptamer_exec.db.reverse  aptamer_full.db.bak  aptamer_full.db.reverse  bio_full.db.crawl_progress  biology2e.db.regions.json  brain.db.bulk_ch10_nopartof  brain.db.ch10_expanded  brain.db.ch10_expanded.reverse  brain.db.drifted_s1  brain.db.hand_curated_nopartof  brain.db.hand_faithful  brain.db.openie_no_verb_teach  brain.db.openie_verbs  brain.db.with_part_of_leak  bundle.sh  claude_taught.db.regions.json  compartment.db.regions.json  index.html  install-linux.sh  install-sara.sh  install.sh  jkd_limitations.db.reverse  pyproject.toml  sara_q.py  v005_design_philosophy.docx  v005_design_philosophy_gdocs.docx  v005_design_philosophy_v2.docx  v006_design_philosophy.docx  v007_design_philosophy.docx  v008_design_philosophy.docx  ~$05_design_philosophy_v2.docx
.claude/: settings.local.json
benchmarks/: batch_teach.py  bio_10q_facts.txt  bio_10q_questions.json  biology_facts.txt  bridge_biology2e.py  build_dictionary.py  ch10_chapters.json  ch10_hand_curated.txt  ch10_math_reteach.txt  ch10_r2_cell_cycle.txt  ch10_r2_evolution.txt  ch10_r2_meiosis.txt  ch10_r3_cancer.txt  ch10_r3_evolution.txt  ch10_r3_genetics.txt  ch10_r3_reproduction.txt  ch10_r3b_cancer.txt  ch10_r4_genetics.txt  ch10_r4_meiosis.txt  ch10_r4_reproduction.txt  ch10_teaching_round1.txt  ch10_teaching_round2.txt  ch10_test_questions.json  ch10_wavefront.json  ch10_wavefront_bidir.json  ch10_wavefront_ch10only.json  ch10_wavefront_expanded.json  ch10_wavefront_full.json  ch10_wavefront_hand_faithful.json  ch10_wavefront_handtaught.json  ch10_wavefront_nopartof.json  ch10_wavefront_openie_verbs.json  ch10_wavefront_reteach.json  claude_extracted_facts.txt  comprehension_teacher.py  curious_ingest.py  curriculum_math.txt  find_gap_context.py  full_biology_crawl.py  gpqa_diamond_chemistry.json  (+42 more)
css/: styles.css
demos/: apple_demo.py  generate_wiki_demo.py  qmse_demo.py  qmse_dump.py  teach_qmse.py
docs/: benchmark_report_2026-04-12-16.md  brain_tour_for_tts.txt  data_squirrel_guide.md  generate_docs.py  gpqa_diamond_findings_2026-04-14.md  sara_brain_user_guide.md  sensory_cortex_levels_for_tts.txt  teacher_cascade_prompts_draft.md  transformer_concept_for_tts.docx  transformer_concept_for_tts.txt  v001_foundation.md  v002_user_guide.docx  v002_user_guide.md  v002_user_guide.pptx  v003_perception.md  v004_web_app.md  v005_design_philosophy.md  v006_design_philosophy.md  v007_design_philosophy.md  v008_design_philosophy.md  v009_sara_steered_an_llm.docx  v009_sara_steered_an_llm.md  v010_mcp_server.md  v010_sara_care.docx  v010_sara_care.md  v011_installation_guide.md  v012_failure_modes_and_the_cortex.md  v013_provenance_gaming_and_typo_pollution.md  v014_sleep_consolidation.md  v015_primitive_layers_as_brain_structures.md  v016_squirrel_storage_plan.md  v017_sensory_shell.md  v017_sensory_shell_implementation.md  v018_spacy_sensory_cortex_baseline.md  v019_teaching_to_gaps.md  v020_biology2e_ingest.md  v021_biology2e_session_summary.md  v022_hierarchical_concept_storage.md  v023_session_state_2026-04-20.md  v024_organ_architecture_plan.md
feedback_to_anthropic/: bug_report_repo_visibility_destructive_action.md
harness/: MCP_TOOLS.md  PROTOCOL.md  PURPOSE.md
js/: app.js  bridge.js  docs.js  graph.js  guided.js  imageviewer.js  persistence.js  vision.js
papers/: TODO.md  agi26_short_paper.aux  agi26_short_paper.docx  agi26_short_paper.md  agi26_short_paper.out  agi26_short_paper.tex  arxiv_preprint.docx  arxiv_preprint.md  conference_strategy.docx  conference_strategy.md  linkedin_curiosity_drive.txt  md_to_docx.py  model_infections_draft_v1.md  model_infections_paper_rev2.md  model_infections_paper_rev3.md  model_infections_paper_rev4.md  model_infections_paper_rev5.md  model_infections_paper_rev6.md  model_infections_paper_v1.md  sara_as_instrument_draft_v1.md  sara_as_instrument_paper_rev2.md  sara_as_instrument_paper_rev3.md  sara_as_instrument_paper_rev4.md  sara_as_instrument_paper_rev5.md  sara_as_instrument_paper_v1.md  substack_45_facts.txt  substack_brain_doesnt_need_gpu.txt  substack_curiosity_drive.txt  teaching_vs_training_draft.md  teaching_vs_training_draft_v3.md  training_corrupts_reading_draft_v1.md  training_corrupts_reading_paper_rev2.md  training_corrupts_reading_paper_v1.md  v1.1_design_notes.md  zenodo_preprint.md  zenodo_preprint_rev2.md  zenodo_preprint_rev3_2026-04-12.docx  zenodo_preprint_rev3_2026-04-12.md  zenodo_v1.1_preprint.md
patent/: provisional_patent_application.md
(+258 files in other folders)
