[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sara-brain"
version = "0.1.0"
description = "Path-of-thought brain simulation"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
mcp = ["mcp>=1.0"]

[project.scripts]
sara = "sara_brain.repl.shell:main"
sara-agent = "sara_brain.agent.cli:main"
sara-mcp = "sara_brain.mcp_server:main"
sara-cortex = "sara_brain.cortex.cli:main"
sara-cleanup = "sara_brain.cortex.cleanup:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
