[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sara-brain"
version = "0.1.0"
description = "Path-of-thought cognitive architecture with structural alignment through innate primitives"
requires-python = ">=3.11"
dependencies = []
authors = [{name = "Jennifer Pearl", email = "jenpearl5@gmail.com"}]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
reader = ["anthropic>=0.30.0"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
sara = "sara_brain.repl.shell:main"
sara-agent = "sara_brain.agent.cli:main"
sara-mcp = "sara_brain.mcp_server:main"
sara-cortex = "sara_brain.cortex.cli:main"
sara-cleanup = "sara_brain.cortex.cleanup:main"
sara-shell = "sara_brain.sensory.cli:main"
sara-ask = "sara_reader.cli:main"
sara-ask-stateless = "sara_reader.cli_stateless:main"
sara-teach = "sara_reader.cli_teach:main"
sara-refute = "sara_reader.cli_refute:main"
sara-synth = "sara_brain.tools.synthetic_substrate:main"
sara-new = "sara_brain.tools.new_brain:main"
sara-experiment = "sara_brain.tools.run_experiment:main"

[project.urls]
Homepage = "https://github.com/LunarFawn/SaraBrain"
Repository = "https://github.com/LunarFawn/SaraBrain"
Issues = "https://github.com/LunarFawn/SaraBrain/issues"
Paper = "https://doi.org/10.5281/zenodo.19436522"
Substack = "https://pathofthought.substack.com"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sara_brain*", "sara_reader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
